<resources>
    <!-- BASIC STRINGS -->
    <string name="app_name">Naprawiamy</string>
    <string name="ok" translatable="false">OK</string>
    <string name="account">Account</string>
    <string name="listings">Listings</string>
    <string name="archive">Archive</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_reconnect_message">An error with connection occurred, do you want to try again?</string>
    <string name="press_to_exit">Press once again to exit!</string>
    <string name="settings">Settings</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard changes?</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="keep_editing">Keep editing</string>
    <string name="data_saved">Data successfully saved!</string>
    <string name="update_error_title">Data not saved!</string>
    <string name="update_error_message">There was an error with saving the data, try again!</string>

    <!-- PREFERENCES STRINGS -->
    <string name="preferences">Preferences</string>
    <string name="night_mode_key" translatable="false">night_mode</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Turn on night mode in the app</string>

    <!-- LOGIN STRINGS -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_as">Sign in as:</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_as">Sign up as:</string>
    <string name="join_naprawiamy">Join Naprawiamy now!</string>
    <string name="sign_out">Sign out</string>
    <string name="email_error_empty">Invalid email value!</string>
    <string name="password_error_empty">Password cannot be empty!</string>
    <string name="account_not_found_dialog_message">Account not found!</string>
    <string name="account_exists_dialog_message">There is already an account registered to this email address!</string>
    <string name="signed_in">Signed in</string>

    <!-- ACCOUNT STRINGS -->
    <string name="client">Client</string>
    <string name="specialist">Specialist</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">E-mail address</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="categories">Categories</string>
    <string name="collapse_skills_sheet">Lower skills sheet</string>

    <!-- LISTINGS AND ARCHIVE STRINGS -->
    <string name="add_listing">Add new listing</string>
    <string name="search">Search</string>
    <string name="listings_search_hint">I search for…</string>
    <string name="empty_listings_list">There are no listings saved yet!</string>
    <string name="empty_archive_list">You have not added any listings yet,\nyour archive is empty!</string>
    <string name="listing_photo_description">Photo of the listing</string>
    <string name="add_photos_content_desc">Click here to add photos</string>
    <string name="delete_photo_content_desc">Click here to delete this photo</string>
    <string name="select_gallery">Select gallery</string>
    <string name="listing_photo_content_desc">Photo of the listing</string>
    <string name="select_pictures">Opening gallery… You can select up to 5 photos.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="proposed_value">Proposed value</string>
    <string name="deadline">Deadline</string>
    <string name="proposals">Proposals:</string>
    <string name="accept_proposal">Accept proposal</string>
    <string name="rate_realization">Rate realization</string>
    <string name="delete_vote">Delete vote</string>
    <string name="rate_realization_dialog_title">Rate realization of this listing:</string>
    <string name="rate_realization_dialog_error">Rating must be selected!</string>
    <string name="delete_vote_dialog_title">Are you sure you want to delete this vote?</string>
    <string name="delete_vote_dialog_message">Current vote: %d</string>
    <string name="vote_saved">Vote saved!</string>
    <string name="vote_save_error">Vote not saved! Try again in a moment!</string>
    <string name="vote_deleted">Vote deleted!</string>
    <string name="vote_delete_error">Vote not deleted! Try again in a moment!</string>
    <string name="proposal_deleted">Proposal deleted!</string>
    <string name="proposal_delete_error">Proposal not deleted! Try again in a moment!</string>
    <string name="proposal_accepted">Proposal successfully accepted!</string>
    <string name="proposal_sent">Proposal successfully sent!</string>
    <string name="empty_data_not_allowed">If you want to save listing, you have to fill all information!</string>
    <string name="proposal_dialog_title">Make a proposal to listing</string>
    <string name="proposed_value_error_empty">This value cannot be empty!</string>
    <string name="proposal_error">You have already made a proposal for this listing! Do you want to delete this proposal?\nPreviously proposed value: %.2f</string>
</resources>
