<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.fragments.ListingDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/listingDetailsPhoto"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:contentDescription="@string/add_photos_content_desc"
            android:src="@drawable/ic_no_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photosRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="220dp"
            tools:listitem="@layout/item_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listingDetailsPhoto">

            <pl.sokolowskibartlomiej.naprawiamy.view.views.MyTextInputEditText
                android:id="@+id/titleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorBackground"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:maxLines="2"
                android:textColor="?attr/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

            <pl.sokolowskibartlomiej.naprawiamy.view.views.MyTextInputEditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorBackground"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="3"
                android:textColor="?attr/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showSkillsBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/categories"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?attr/colorAccent"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout"
            app:strokeColor="?colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showSkillsBtn">

            <pl.sokolowskibartlomiej.naprawiamy.view.views.MyTextInputEditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorBackground"
                android:hint="@string/city"
                android:inputType="textCapWords|textPostalAddress"
                android:maxLines="1"
                android:textColor="?attr/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/proposedValueInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressInputLayout">

            <pl.sokolowskibartlomiej.naprawiamy.view.views.MyTextInputEditText
                android:id="@+id/proposedValueET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorBackground"
                android:hint="@string/proposed_value"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:textColor="?attr/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/deadlineInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proposedValueInputLayout">

            <pl.sokolowskibartlomiej.naprawiamy.view.views.MyTextInputEditText
                android:id="@+id/deadlineET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorBackground"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/deadline"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="?attr/colorText"
                tools:ignore="KeyboardInaccessibleWidget" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/proposalsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/proposals"
            android:textColor="?attr/colorText"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deadlineInputLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/proposalsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proposalsText"
            tools:listitem="@layout/item_proposal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>